refactor: remove unnecessary functions and mocks
- Remove `terminateSinopac()` and `terminateFugle()` functions from `basic.go` and `interfaces_usecase.go`
- Remove corresponding mock functions from `mocks_usecase_test.go`
